--- a/src/scss/components/_static.scss
+++ b/src/scss/components/_static.scss
@@ -40,7 +40,7 @@
     line-height: 24px;
     color: #B9ADAD;
 
-    margin: -13px 0 21px 50px;
+    margin: -13px 83px 21px 50px;
 }
 
 @media (max-width: 1399px) {
@@ -52,34 +52,40 @@
 @media (max-width: 1199px) {
     .demo__description {
         font-size: 21.5px;
-        margin: -10px 0 23px 50px;
+        margin: -10px 75px 23px 50px;
     }
 }
 
 @media (max-width: 991px) {
     .demo__description {
         font-size: 19px;
-        margin: -20px 50px 20px 50px;
+        margin: -20px 60px 20px 50px;
     }
 }
 
 @media (max-width: 767px) {
     .demo__description {
-        margin: -23px 75px 20px 42px;
+        margin: -29px 75px -65px 38px;
     }
 }
 
 @media (max-width: 415px) {
     .demo__description {
         font-size: 19px;
-        margin: -20px 64px 20px 28px;
+        margin: -29px 75px -65px 38px;
     }
 }
 
 @media (max-height: 800px) {
     .demo__description {
-        margin: -17px 70px 16px 50px;
+        margin: -17px 70px 16px 50px; 
     }
+
+    @media (max-width: 767px) {
+        .demo__description {
+            margin: -24px 75px -65px 38px;
+        }
+    } 
 }
 
 .demo__center {
